--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,7 @@ on:
       - checks_requested
   push:
     branches:
-      - master
-      - develop
-      - next
+      - main
     paths-ignore:
       - "**.md"
       - "**.yml"
